# pynigeria-backend

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  manage.py  pyproject.toml  requirements.txt  requirements_filtered.txt  schema.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/data/: backend-cloud.csv  review.csv  security.csv
.github/workflows/: csv_issues_project.yml
apps/authentication/: admin.py  apps.py  email.py  models.py  serializers.py  signals.py  social_authentication.py  test_settings.py  tests.py  urls.py  views.py
apps/common/: filterset.py  helper.py
apps/community/: admin.py  models.py  permissions.py  serializers.py  test_models.py  test_views.py  urls.py  views.py
apps/events/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/job_listing_api/: admin.py  apps.py  email.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/knowledge_base_api/: apps.py  models.py  permissions.py
apps/tracking/: models.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  signals.py  (+2 more)
authentication/: models.py  serializers.py  social_authentication.py  views.py
config/: .env.example  asgi.py  exception_handler.py  log_formatters.py  settings.py  spectacular_hooks.py  urls.py  wsgi.py
docs/: API.md  CHANGELOG.md  CODE_OF_CONDUCT.md
pynigeriaBackend/: log_formatters.py  settings.py
requirements/: requirements.txt  requirements_filtered.txt
tracking/: models.py
(+14 files in other folders)
