[project]
name = "python-nigeria-backend"
version = "0.1.0"
description = "Python 9ja Backend Repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-oauth-toolkit>=3.2.0",
    "django-otp>=1.7.0",
    "django-taggit>=6.1.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-social-oauth2>=3.2.0",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.3.1",
    "gunicorn>=25.1.0",
    "nanoid>=2.0.0",
    "pillow>=12.1.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "whitenoise>=6.12.0",
]
